--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     >
       
 
-      <a-marker type='pattern' url='https://zhaiergou.github.io/finalwatertrained.patt'
+      <a-marker type='pattern' url='https://grendel99z.github.io/pattern-finalwater.patt'
         raycaster="objects: .clickable"
         emitevents="true"
         cursor="fuse: false; rayOrigin: mouse;"
