--- a/SJY.html
+++ b/SJY.html
@@ -5,7 +5,13 @@
     <title> My First Webpage </title>
 </head>
 
-       <p> <b>WELCOME TO SJY HOMEPAGE</b> </p>
+    <p> <b>WELCOME TO SJY HOMEPAGE</b> </p>
+
+<body>
+
+    <img src="https://grendel99z.github.io/SJY/SJYBorder.jpg"
+
+</body>
 
 
 
