--- a/SJY.html
+++ b/SJY.html
@@ -2,25 +2,31 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title> My First Webpage </title>
 </head>
 
-    <p> <b>WELCOME TO SJY HOMEPAGE</b> </p>
+    <h1> <center> <font size="7"> <b>WELCOME TO SJY HOMEPAGE</b> </font> </h1> </center> 
+
+<style>
+
+body{
+        background-image: url('https://grendel99z.github.io/SJY/SJYBorder.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        color: #FFFFFF;
+    }
+
+
+
+
+</style>
 
 <body>
+        
 
-    <img src="https://grendel99z.github.io/SJY/SJYBorder.jpg"
+
 
 </body>
 
-
-
-
-
-
-
-
-
-
-
-</html>
